test/compile_errors/err_undefined_var.w
//! expect-check-fail: undefined variable

// Test: referencing an undefined variable is rejected.

fn main:
    print(int_to_string(x))
